log
Sun 11 Sep 2022 03:38:34 AM UTC: 
 hashmap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:27: error: ‘pair’ undeclared (first use in this function); did you mean ‘Pair’?
   56 |   nuevoMapa -> buckets = (pair **)calloc(capacity,sizeof(pair*));
      |                           ^~~~
      |                           Pair
hashmap.c:56:27: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:56:34: error: expected expression before ‘)’ token
   56 |   nuevoMapa -> buckets = (pair **)calloc(capacity,sizeof(pair*));
      |                                  ^
Compilation failed
9b58ce1
Sun 11 Sep 2022 03:38:54 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:58: error: ‘pair’ undeclared (first use in this function); did you mean ‘Pair’?
   56 |   nuevoMapa -> buckets = (Pair **)calloc(capacity,sizeof(pair*));
      |                                                          ^~~~
      |                                                          Pair
hashmap.c:56:58: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:56:63: error: expected expression before ‘)’ token
   56 |   nuevoMapa -> buckets = (Pair **)calloc(capacity,sizeof(pair*));
      |                                                               ^
Compilation failed
503f113
Sun 11 Sep 2022 03:39:02 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e6d8fdf
Sun 11 Sep 2022 03:45:05 AM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0fa6261
Sun 11 Sep 2022 04:11:11 AM UTC: 
 hashmap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  7|3
total_score: 30/70
b29b83d
Sun 11 Sep 2022 04:17:33 AM UTC: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
cfb0ff7
Sun 11 Sep 2022 04:25:00 AM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:65:7: error: expected ‘(’ before ‘long’
   65 |   for long i = 0; i < map->capacity/2;i++){
      |       ^~~~
      |       (
hashmap.c:65:3: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   65 |   for long i = 0; i < map->capacity/2;i++){
      |   ^~~
hashmap.c:65:19: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   65 |   for long i = 0; i < map->capacity/2;i++){
      |                   ^
hashmap.c:65:19: error: ‘i’ undeclared (first use in this function)
hashmap.c:65:19: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:65:42: error: expected ‘;’ before ‘)’ token
   65 |   for long i = 0; i < map->capacity/2;i++){
      |                                          ^
      |                                          ;
hashmap.c:65:42: error: expected statement before ‘)’ token
hashmap.c:59:11: error: variable ‘prevBuckets’ set but not used [-Werror=unused-but-set-variable]
   59 |   Pair ** prevBuckets = map -> buckets;
      |           ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c1dc7b0
Sun 11 Sep 2022 04:25:19 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|1
total_score: 60/70
d5a308d
Sun 11 Sep 2022 04:39:10 AM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  14|1
total_score: 60/70
4303552
